--- a/src/components/ui/text-field/text-field.module.scss
+++ b/src/components/ui/text-field/text-field.module.scss
@@ -28,8 +28,8 @@
   }
 
   &:focus-visible {
-    outline: 1px solid var(--color-outline-focus);
-    border-color: var(--color-outline-focus);
+    outline: 1px solid var(--color-info-700);
+    border-color: var(--color-info-700);
   }
 
   &:hover {
@@ -66,6 +66,11 @@
   outline: 0;
 
   &:focus-visible {
-    outline: var(--outline-focus);
+    outline: var(--color-info-700);
   }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
 }
