--- a/src/components/ui/typography/typography.module.scss
+++ b/src/components/ui/typography/typography.module.scss
@@ -1,10 +1,7 @@
 @mixin typography($fontSize, $lineHeight, $fontWeight) {
-  margin: 0;
-
   font-size: $fontSize;
   font-weight: $fontWeight;
   line-height: $lineHeight;
-  color: var(--color-text-primary);
 }
 
 .large {
@@ -52,7 +49,7 @@
   @include typography(var(--font-size-s), var(--line-height-m), var(--font-weight-regular));
 
   cursor: pointer;
-  color: var(--color-text-link);
+  color: var(--color-primary);
   text-decoration: underline;
 }
 
