fetch: add sign-up component

--- a/src/components/auth/sign-in/sign-in.module.scss
+++ b/src/components/auth/sign-in/sign-in.module.scss
@@ -12,13 +12,6 @@
   margin: 0.75rem 0 0.38rem 0;
 }
 
-.forgotPassword {
-  display: flex;
-  justify-content: end;
-  text-decoration: none;
-  margin-bottom: 4.12rem;
-}
-
 .textField:not(:first-of-type) {
   margin-top: 1.5rem;
 }
@@ -26,10 +19,22 @@
 .description {
   color: var(--light-color-900, #c3c1c7);
   text-align: center;
+  margin-top: 1.25rem;
 }
 
 .signUp {
   display: flex;
   justify-content: center;
   margin-top: 0.69rem;
+  font-size: var(--font-size-m) !important;
+  font-weight: var(--font-weight-bold) !important;
+  color: var(--color-accent-500) !important;
+}
+
+.forgot,
+.forgot:visited {
+  display: flex;
+  justify-content: end;
+  text-decoration: none;
+  margin-bottom: 4.12rem;
 }
