--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,6 +2,7 @@
   --font-family-primary: 'Roboto', sans-serif;
 
   // line heights
+  --line-height-xs: 0.991;
   --line-height-s: 16px;
   --line-height-m: 24px;
   --line-height-l: 36px;
