fetch: add forgot-password-component

--- a/src/components/auth/forgot-password/forgot-password.module.scss
+++ b/src/components/auth/forgot-password/forgot-password.module.scss
@@ -24,10 +24,10 @@
 }
 
 .loginIn {
-  color: var(--primary-500, #8c61ff) !important;
-  font-size: 1rem !important;
-  font-weight: 700 !important;
-  line-height: 1.5rem !important;
+  color: var(--primary-500, #8c61ff);
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5rem;
   display: flex;
   justify-content: center;
 }
