fetch: add forgot-password-component

--- a/src/components/auth/forgot-password/forgot-password.module.scss
+++ b/src/components/auth/forgot-password/forgot-password.module.scss
@@ -12,22 +12,20 @@
 }
 
 .info {
-  color: var(--light-900, #c3c1c7) !important;
+  color: var(--light-900, #c3c1c7);
   opacity: 0.5;
-  margin-bottom: 4.06rem !important;
+  margin-bottom: 4.06rem;
 }
 
 .rememberPassword {
-  margin: 1.25rem 0 0.69rem 0 !important;
-  color: var(--light-900, #c3c1c7) !important;
+  margin: 1.25rem 0 0.69rem 0;
+  color: var(--light-900, #c3c1c7);
   text-align: center;
 }
 
 .loginIn {
-  color: var(--primary-500, #8c61ff);
   font-size: 1rem;
   font-weight: 700;
-  line-height: 1.5rem;
   display: flex;
   justify-content: center;
 }
