--- a/src/components/auth/sign-in/sign-in.module.scss
+++ b/src/components/auth/sign-in/sign-in.module.scss
@@ -26,9 +26,9 @@
   display: flex;
   justify-content: center;
   margin-top: 0.69rem;
-  font-size: var(--font-size-m) !important;
-  font-weight: var(--font-weight-bold) !important;
-  color: var(--color-accent-500) !important;
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-bold);
+  color: var(--color-accent-500);
 }
 
 .forgot,
