--- a/src/components/ui/slider/slider.module.scss
+++ b/src/components/ui/slider/slider.module.scss
@@ -1,42 +1,92 @@
-.container {
+.sliderContainer {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  gap: 10px;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: flex-start;
+
+  transition: all 0.4s ease;
+
+  .slider {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+
+    .SliderRoot {
+      touch-action: none;
+      user-select: none;
+
+      position: relative;
+
+      display: flex;
+      align-items: center;
+
+      width: 200px;
+      height: 20px;
+
+      .SliderTrack {
+        cursor: pointer;
+
+        position: relative;
+
+        flex-grow: 1;
+
+        height: 0.3125rem;
+
+        background: var(--color-accent-900);
+        border-radius: 9999px;
+
+        .SliderRange {
+          position: absolute;
+          height: 100%;
+          background-color: var(--color-accent-500);
+          border-radius: 9999px;
+        }
+      }
+
+      .SliderThumb {
+        cursor: pointer;
+
+        display: block;
+
+        width: 16px;
+        height: 16px;
+
+        background-color: white;
+        border: 4px solid var(--color-accent-500);
+        border-radius: 16px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+    .value {
+      pointer-events: none;
+      user-select: none;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 36px;
+      height: 36px;
+
+      text-align: center;
+
+      border: 1px solid var(--color-dark-300);
+      border-radius: 2px;
+    }
+  }
 }
 
-.root {
-  display: flex;
-  position: relative;
-  width: 100%;
-  user-select: none;
-  touch-action: none;
-  align-items: center;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  margin: 0;
+  appearance: none;
 }
 
-.track {
-  position: relative;
-  width: 100%;
-  height: 4px;
-  background-color: var(--color-accent-500);
-  opacity: 50%;
-  border-radius: 2px;
-}
-
-.range {
-  position: absolute;
-  height: 100%;
-  background-color: var(--color-accent-500);
-}
-
-.thumb {
-  display: block;
-  height: 16px;
-  width: 16px;
-  background-color: var(--color-light-100);
-  border-radius: 9999px;
-  cursor: pointer;
-  touch-action: pan-x;
-  transition: transform 0.2s ease-in-out;
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
 }
