--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -1,18 +1,64 @@
-.overlay {
-  position: fixed;
-  z-index: 100;
-  inset: 0;
-  background-color: rgb(0 0 0 / 50%);
+@import '@/styles/mixins';
+
+/* reset */
+button,
+fieldset,
+input {
+  all: unset;
 }
 
-.content {
+.separator[data-orientation='horizontal'] {
+  position: absolute;
+  top: 59px;
+  left: 0;
+
+  width: 100%;
+  height: 1px;
+
+  background-color: var(--color-dark-500);
+}
+
+.titleWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  height: 24px;
+  margin-bottom: 23px;
+}
+
+.DialogOverlay {
   position: fixed;
-  z-index: 101;
+  inset: 0;
+  background-color: rgb(0 0 0 / 44%);
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.DialogContent {
+  position: fixed;
+  z-index: 100;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
+  padding: 18px 24px;
+
   background-color: var(--color-dark-700);
+  border: 1px solid var(--color-dark-500);
+  border-radius: 2px;
+  box-shadow: hsl(206deg 22% 7% / 35%) 0 10px 38px -10px, hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
+
+  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 
   &.sm {
     width: 367px;
@@ -36,47 +82,90 @@
   }
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: 14px 24px;
-
-  border-bottom: 1px solid var(--color-dark-500);
+.DialogContent:focus {
+  outline: none;
 }
 
-.title {
-  margin: 0;
-  font-size: var(--font-size-m);
-  font-weight: var(--font-weight-bold);
-  line-height: var(--line-height-m);
+.DialogDescription {
 }
 
 .contentBox {
-  padding: 23px 24px 36px;
+  @include flex-block($gap: 24px, $align-items: flex-start);
+
+  padding: 24px 0;
 }
 
-.closeButton {
+.IconButton {
+  all: unset;
+
   cursor: pointer;
 
+  position: absolute;
+  top: 20px;
+  right: 24px;
+
+  svg {
+    transform: scale(1.5);
+  }
+
+  &:hover svg {
+    background-color: var(--color-dark-500);
+    border-radius: 100%;
+  }
+}
+
+.Fieldset {
   display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.Label {
+  width: 90px;
+  font-size: 15px;
+  color: var(--violet-11);
+  text-align: right;
+}
+
+.Input {
+  display: inline-flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
 
-  width: 36px;
-  height: 36px;
-  padding: 0;
+  width: 100%;
+  height: 35px;
+  padding: 0 10px;
 
-  background: transparent;
-  border: none;
-  border-radius: 50%;
+  font-size: 15px;
+  line-height: 1;
+  color: var(--violet-11);
 
-  transition: 0.2s background-color;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px var(--violet-7);
+}
 
-  &:hover,
-  &:focus-visible {
-    background-color: var(--color-dark-300);
-    outline: none;
+.Input:focus {
+  box-shadow: 0 0 0 2px var(--violet-8);
+}
+
+.footerBlock {
+  @include flex-block($flex-direction: row, $justify-content: space-between);
+}
+
+.actionButton {
+  margin-left: auto;
+}
+
+@keyframes contentShow {
+  from {
+    transform: translate(-50%, -48%) scale(0.96);
+    opacity: 0;
+  }
+
+  to {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
 }
