--- a/src/components/ui/text-field/text-field.module.scss
+++ b/src/components/ui/text-field/text-field.module.scss
@@ -1,76 +1,159 @@
+@import '@/styles/mixins';
+
+[type='search']::-webkit-search-cancel-button {
+  appearance: none;
+}
+
+input {
+  all: unset;
+}
+
 .root {
+  display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
-.fieldContainer {
-  width: 100%;
+.inputContainer {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
-.field {
-  width: 100%;
-  padding: 6px 12px;
+.iconStart {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
 
-  font-family: inherit;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
+  display: grid;
+  place-items: center;
+
+  color: var(--color-dark-100);
+
+  &:has(~ .input:focus) {
+    color: var(--color-light-100);
+  }
+
+  //TODO remember this selector
+}
+
+.iconEnd {
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  transform: translateY(-50%);
+
+  display: grid;
+  place-items: center;
+
+  width: 20px;
+  height: 20px;
+}
+
+.input {
+  cursor: auto;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  padding: 6px 40px 6px 12px;
+
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-m);
   color: var(--color-light-100);
 
-  background: transparent;
-  border: 1px solid var(--color-dark-300);
-  outline: 0;
+  border-radius: 2px;
+  outline: none;
+  box-shadow: 0 0 0 1px var(--color-dark-500);
 
-  transition: border-color 0.2s;
+  transition: 0.3s;
 
   &::placeholder {
     color: var(--color-dark-100);
   }
 
-  &:focus-visible {
-    outline: 1px solid var(--color-info-700);
-    border-color: var(--color-info-700);
+  &:disabled {
+    color: var(--color-dark-300);
   }
 
-  &:hover {
-    background: var(--color-dark-700);
+  //TODO: focus visible border info700 var
+
+  &:focus,
+  &:active:enabled {
+    box-shadow: 0 0 0 1px var(--color-light-100);
+
+    &::placeholder {
+      color: var(--color-dark-100);
+    }
+  }
+
+  &:hover:not(&:disabled) {
+    background-color: var(--color-dark-700);
   }
 
   &.error {
-    border-color: var(--color-danger-300);
     color: var(--color-danger-300);
+    box-shadow: 0 0 0 1px var(--color-danger-300);
+
+    &::placeholder {
+      color: var(--color-danger-300);
+    }
+  }
+
+  &[data-icon*='start'] {
+    padding-left: 36px;
+  }
+
+  &[data-icon*='end'] {
+    padding-right: 36px;
   }
 }
 
-.label {
-  margin-bottom: 1px;
-  color: var(--color-dark-100);
-}
+.iconButton {
+  all: unset;
 
-.showPassword {
   cursor: pointer;
 
   position: absolute;
-  bottom: 50%;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 0;
+  right: 10px;
 
-  width: 20px;
-  height: 20px;
-  margin-right: 12px;
-  padding: 0;
+  display: flex;
 
-  background: transparent;
-  border: 0;
-  outline: 0;
+  border-radius: 100%;
 
-  &:focus-visible {
-    outline: var(--color-info-700);
+  transition: 0.4s;
+
+  &:hover {
+    background-color: grey;
+  }
+
+  &.disabled {
+    cursor: unset;
+    color: var(--color-dark-300);
   }
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:focus {
-  transition: background-color 600000s 0s, color 600000s 0s;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  background: linear-gradient(
+    top,
+    rgb(255 255 255 / 0%) 0%,
+    rgb(0 174 255 / 4%) 50%,
+    rgb(255 255 255 / 0%) 51%,
+    rgb(0 174 255 / 3%) 100%
+  );
+  transition: background-color 5000s ease-in-out 0s;
+
+  -webkit-text-fill-color: #dfdfdf;
 }
