--- a/src/components/ui/avatar/avatar.module.scss
+++ b/src/components/ui/avatar/avatar.module.scss
@@ -1,4 +1,51 @@
-.avatar {
-  object-fit: cover;
-  border-radius: 50%;
+.avatarRoot {
+  user-select: none;
+
+  position: relative;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  vertical-align: middle;
+
+  border-radius: 100%;
+
+  .avatar {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: inherit;
+  }
+
+  .icon {
+    cursor: pointer;
+
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 24px;
+    height: 24px;
+
+    background-color: var(--color-dark-300);
+    border-radius: 4px;
+    box-shadow: 0 2px 10px 0 rgb(109 109 109 / 25%);
+  }
+
+  .fallback {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: grey;
+    border-radius: 50%;
+  }
 }
